* Fixed GC problem with dynamic jar class loader